--- a/BlogPessoal/appsettings.json
+++ b/BlogPessoal/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server= ; Initial Catalog=db_blogpessoal; Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
