@richardsantox {TASK:Criação de tabelas com ORM EF / TASK: Teste de contexto} [28/04/22]

--- a/BlogPessoal/appsettings.json
+++ b/BlogPessoal/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server= ; Initial Catalog=db_blogpessoal; Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost; Initial Catalog=db_blogpessoal; port=3306; uid=santos; password=santos;"
   },
   "Logging": {
     "LogLevel": {
