--- a/BlogPessoal/BlogPessoal.csproj
+++ b/BlogPessoal/BlogPessoal.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="src\repositorios\implementacoes\" />
+  </ItemGroup>
+
 </Project>
