--- a/BlogPessoal/appsettings.json
+++ b/BlogPessoal/appsettings.json
@@ -1,6 +1,12 @@
 {
-  "ConnectionStrings": {
+  "Enviroment": {
+    "Start": "PROD"
+  },
+  "ConnectionStringsDev": {
     "DefaultConnection": "Server=localhost; Initial Catalog=db_blogpessoal; port=3306; uid=santos; password=santos;"
+  },
+  "ConnectionStringsProd": {
+    "DefaultConnection": "Host={HOST};Database={DATABASE};User Id={USER};Port={PORT};Password={ PASSWORD };Pooling=true;SSL Mode=Require;TrustServerCertificate=True;"
   },
   "Settings": {
     "Secret": "fedaf7d8863b48e197b9287d492b708e"
@@ -14,3 +20,12 @@
   },
   "AllowedHosts": "*"
 }
+
+
+
+
+
+///  "ConnectionStrings": {
+///      "DefaultConnection": "Server=localhost; Initial Catalog=db_blogpessoal; port=3306; uid=santos; password=santos;"
+///    },
+
